database changed to MsSql

--- a/Presentation/ECommerceApi.Api/appsettings.json
+++ b/Presentation/ECommerceApi.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "MsSqlConnectionString": "Server=.; Database=ECommerceApiDb; Integrated Security=True",
     "PostgreSqlConnectionString": "User ID=postgres;Password=emre6767;Host=localhost;Port=5432;Database=ECommerceApiDb;"
   }
 }
