database changed to postgreSQL

--- a/Presentation/ECommerceApi.Api/appsettings.json
+++ b/Presentation/ECommerceApi.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MsSqlConnectionString": "Server=.; Database=ECommerceApiDb; Integrated Security=True",
-    "PostgreSqlConnectionString": "User ID=postgres;Password=emre6767;Host=localhost;Port=5432;Database=ECommerceApiDb;"
+    "PostgreSqlConnectionString": "User ID=postgres;Password=asd1234;Host=localhost;Port=5432;Database=ECommerceApiDb;"
   }
 }
